# personal-ai-assistant

./: .env.example  .gitignore  API_SEARCH_README.md  CODE_REVIEW_REPORT.md  Dockerfile  MCP_IMPORT_GUIDE.md  MCP_INTEGRATION_SUMMARY.md  PERSONALITY_SKILLS_README.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.sh
docs/: OPTIMIZATION_PLAN.md  ai-decision-layer-design.md  architecture-comparison-v2.md  architecture_analysis_final.md  implementation-roadmap.md  minimax-optimization-roadmap.md  nanobot_comparison.md  nanobot_real_analysis.md  optimization-plan-v1.md  optimization-proposal-v2.md  real_comparison.md
docs/api/: claude-code-headers.md  gateway-spec.json
docs/architecture/: design-doc.md  migration-guide-v2.md  refactor-v2-design.md
docs/archive/: agent-router-code-review-v2.md  agent-router-code-review-v3.md  agent-router-code-review-v4.md  agent-router-code-review.md  agent-router-features.md  agent-router-implementation-guide-v2.md  agent-router-migration-plan.md  code-audit-report.md  fix_confirmation.md  fix_summary.md  fix_summary_final.md  fix_summary_v2.md
docs/guides/: MCP_CONFIG_ANALYSIS.md  MCP_CONFIG_ANALYSIS_UPDATED.md  (+2 more)
examples/: gateway_demo.py  import_claude_mcp_config.py  mcp_demo.py  v2_agent_demo.py
src/: __init__.py  agent_demo.py  main.py
tests/: test-plan.md  test_agent.py  test_channels.py  test_fallback_llm.py  test_mcp_manager.py  test_memory.py  test_memory_fallback.py  test_memory_integration.py  test_schedule.py  test_task.py  test_token_compression.py  test_tool_decorators.py
(+111 files in other folders)
