[project]
name = "personal-ai-assistant"
version = "1.0.0"
description = "替代 OpenClaw 的个人智能助理 - 基于三层记忆架构"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "python-dotenv>=1.2.1",
    "sqlite-vec>=0.1.6",
    "pyyaml>=6.0.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "json-repair>=0.58.0",
    "semantic-router>=0.1.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
search = [
    "duckduckgo-search>=6.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
pai = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
per-file-ignores = { "src/main.py" = ["E402"], "src/agent_demo.py" = ["E402"] }

[tool.mypy]
python_version = "3.11"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
